# syslog_client

./: .clang-format  CMakeLists.txt  Makefile  SyslogClient.c  SyslogClient.h  SyslogTransport.c  TARGETS  UnixSocket.c  UnixSocket.h  sample.c  syslog_client.c  syslog_client.h  syslog_facility.h  syslog_local_transport.c  syslog_local_transport.h  syslog_message_format.h  syslog_severity.h  syslog_transport.c  syslog_transport.h  unix_socket.c  unix_socket.h
include/: syslog_client.h  syslog_client_ext.h  syslog_transport.h
public/: SyslogClient.h  SyslogFacility.h  SyslogMessageFormat.h  SyslogTransport.h
